provarAnt/00D180000008cIAEAY/objects/Case_Contract_Association__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Contracts Associations</relationshipLabel>
        <relationshipName>Case_Contracts_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Op__c</fullName>
        <formula>TEXT(Contract__r.Co_Op__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Op</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Case Contracts Associations</relationshipLabel>
        <relationshipName>Case_Contracts_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <formula>Contract__r.DMA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESO_Contract_Sys_Id__c</fullName>
        <formula>Contract__r.ATC_Contract_Sys_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ESO Contract Sys Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <formula>Contract__r.Make1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <formula>Contract__r.ATC_Package_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>Contract__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Contract__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Case Contract Association</label>
    <nameField>
        <displayFormat>CCA-{0000}</displayFormat>
        <label>Case Contract Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contracts Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>